--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@astrojs/check": "0.9.4",
+    "@astrojs/cloudflare": "^12.2.1",
     "@astrojs/rss": "4.0.11",
     "@resvg/resvg-js": "^2.6.2",
     "astro": "5.2.0",
